# toml-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  Makefile  README.md
.github/workflows/: build-release.yml  ci.yml  quick-check.yml  release.yml
Formula/: toml.rb
misc/: Dockerfile
src/: main.rs  query_parser.rs
templates/: changelog.md  formula.rb  release.md
test/: demo.toml  test.rs
tools/: build-release  lib.bash  release  test
