[package]
name = "toml-cli"
version = "0.2.3"
description = "A simple CLI for editing and querying TOML files."
authors = ["Greg Price <gnprice@gmail.com>"]
repository = "https://github.com/gnprice/toml-cli"
readme = "README.md"
license = "MIT"

edition = "2021"

[[bin]]
name = "toml"
path = "src/main.rs"

[[test]]
name = "integration"
path = "test/test.rs"

[dependencies]
anyhow = "1.0.66"
clap = { version = "3.2.23", features = ["derive"]}
nom = "7.1.1"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.37"
toml_edit = "0.15"

[dev-dependencies]
tempfile = "3.3.0"
