[package]
name = "toml-cli"
version = "0.2.4"
description = "A simple CLI for editing and querying TOML files."
authors = ["Greg Price <gnprice@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gnprice/toml-cli"
edition = "2021"

[[bin]]
name = "toml"
path = "src/main.rs"

[[test]]
name = "integration"
path = "test/test.rs"

[dependencies]
anyhow = "1.0.66"
nom = "7.1.1"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0.37"
toml_edit = "0.19"

[dev-dependencies]
tempfile = "3.3.0"
